bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: not found: value Maths
  if (Maths.abs(n-100)<=10 || Maths.abs(n-200)<=10){
      ^NearHundred:2: error: not found: value Maths
  if (Maths.abs(n-100)<=10 || Maths.abs(n-200)<=10){
                              ^NearHundred:3: error: not found: value tgrue
    return(tgrue)
           ^