bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (Maths.abs(n-100)<=10 || Maths.abs(n-200)<=10){
    return(tgrue)
  }
  return(false)
}